--- a/shapki/index.html
+++ b/shapki/index.html
@@ -27,7 +27,7 @@
             <li><a href="#">Гарантии</a></li>
             <li><a href="#">Контакты</a></li>
         </ul>
-        <div class="flex enter">
+        <div class="flex align-cent enter">
             <img src="img/profile.png" width="17" height="17" alt="">
             <li><a href="#">&nbsp;Войти/</a></li>
             <li><a href="#">&nbsp;регистрация</a></li>
@@ -99,113 +99,131 @@
             <div class="letter">
                 <li>A
                     <div class="info-container">
+                        <div class="wrapper-letter">
                         <div class="flex align-cent">A<img src="img/brands-1.jpg" alt=""></div>
                         <div class="flex align-cent">Aртель<img src="img/brands-2.jpg" alt=""></div>
                         <div class="flex align-cent">Avanta<img src="img/brands-3.png" alt=""></div>
                         <div class="flex align-cent">Avenue<img src="img/brands-4.png" alt=""></div>
+                        </div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>B
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>C
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>D
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>E
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>F
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>G
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>H
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>I
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>G
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>K
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>L
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>M
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>N
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>O
                     <div class="info-container">
-
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>P
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>R
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>S
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
@@ -213,54 +231,63 @@
                 <li>
                     <Thead></Thead>
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>V
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>W
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>О
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>М
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>И
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>П
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>С
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>Т
                     <div class="info-container">
+                        <div class="wrapper-letter"></div>
                     </div>
                 </li>
             </div>
