--- a/shapki/index.html
+++ b/shapki/index.html
@@ -72,7 +72,7 @@
     <ul class="main-nav flex borders jc-between align-cent">
         <div class="start flex align-cent">
             <div class="flex align-cent first">
-                <div class="menubutton menubutton_main">
+                <div class="menubutton">
                     <div class="menuitem"></div>
                     <div class="menuitem"></div>
                     <div class="menuitem"></div>
@@ -80,6 +80,11 @@
                 <li class="first-menu-item"><a href="#">Каталог</a></li>
             </div>
             <div class="menu flex align-cent jc-between">
+                <li class="mobile-viev mobile-main"><a href="#">Каталог</a><div class="menubutton menubutton_main">
+                    <div class="menuitem"></div>
+                    <div class="menuitem"></div>
+                    <div class="menuitem"></div>
+                </div></li>
                 <li><a href="#">Женщинам</a></li>
                 <li><a href="#">Мужчинам</a></li>
                 <li><a href="#">Детям</a></li>
@@ -89,6 +94,11 @@
                 <li><a href="#">Новинки</a></li>
                 <li><a href="#">Хиты</a></li>
                 <li><a href="#">Акции</a></li>
+                <li class="mobile-viev mobile-main mobile-factory"><a href="#">Производители</a></li>
+                <li class="mobile-viev"><a href="#">О компании</a></li>
+                <li class="mobile-viev"><a href="#">Доставка</a></li>
+                <li class="mobile-viev"><a href="#">Гарантии</a></li class="mobile-viev">
+                <li class="mobile-viev"><a href="#">Контакты</a></li>
             </div>
         </div>
     </ul>
