--- a/shapki/index.html
+++ b/shapki/index.html
@@ -741,46 +741,55 @@
             </section>
         </div>
         <section class="aside">
-            <div class="menubutton menubutton_header">
-                <div class="menuitem"></div>
-                <div class="menuitem"></div>
-                <div class="menuitem"></div>
-            </div>
+            <li class="mobile-viev mobile-main aside-viev"><a href="#">Производители</a></li>
             <h3 class="header-about">Наши поставщики</h3>
+            <div class="aside-content">
             <a style="margin-top: 20px;" href="#">Artel</a>
+            <p class="mobile-viev">A</p>
             <a href="#">Avanta</a>
             <a href="#">Avenue</a>
+            <p class="mobile-viev">B</p>
             <a href="#">Bebe Loca</a>
             <a href="#">Bonds you</a>
             <a href="#">Bonnet</a>
             <a href="#">Brand 69</a>
+            <p class="mobile-viev">C</p>
             <a href="#">Canoe</a>
             <a href="#">Capolli</a>
             <a href="#">Colibri</a>
+            <p class="mobile-viev">D</p>
             <a href="#">Di Lana</a>
             <a href="#">Dispacci</a>
             <a href="#">Dress Cote</a>
+            <p class="mobile-viev">E</p>
             <a href="#">El Gorro</a>
             <a href="#">Elfrio (marhatter)</a>
+            <p class="mobile-viev">F</p>
             <a href="#">Fishka</a>
             <a href="#">Fomas</a>
             <a href="#">Forti</a>
+            <p class="mobile-viev">G</p>
             <a href="#">Gulyann Knitwear</a>
+            <p class="mobile-viev">H</p>
             <a href="#">Happy Lama</a>
             <a href="#">Harmon Moda</a>
             <a href="#">HitHatsHOH</a>
+            <p class="mobile-viev">I</p>
             <a href="#">Imojo</a>
+            <p class="mobile-viev">K</p>
             <a href="#">Kamea</a>
             <a href="#">Katta</a>
             <a href="#">Korkki</a>
             <a href="#">Kotik</a>
             <a href="#">Krife</a>
             <a href="#">Ksenzov</a>
+            <p class="mobile-viev">L</p>
             <a href="#">La Chica Loca</a>
             <a href="#">La Planda</a>
             <a href="#">Landre</a>
             <a href="#">Levelpro</a>
             <a href="#">Lf Label</a>
+            <p class="mobile-viev">M</p>
             <a href="#">Margot Bis</a>
             <a href="#">Marhatter</a>
             <a href="#">Maxval</a>
@@ -789,13 +798,18 @@
             <a href="#">Miks</a>
             <a href="#">Monlolan</a>
             <a href="#">MYLIKE</a>
+            <p class="mobile-viev">N</p>
             <a href="#">NEW CAPS</a>
             <a href="#">Noryalli</a>
+            <p class="mobile-viev">O</p>
             <a href="#">Ocean Angel</a>
             <a href="#">Oxygon</a>
+            <p class="mobile-viev">P</p>
             <a href="#">Paola Belleza</a>
             <a href="#">Pelloni</a>
+            <p class="mobile-viev">R</p>
             <a href="#">Romiks</a>
+            <p class="mobile-viev">S</p>
             <a href="#">Sergeo & Leoni</a>
             <a href="#">Shapkoff</a>
             <a href="#">Snezhna (marhatter)</a>
@@ -805,28 +819,38 @@
             <a href="#">Storm</a>
             <a href="#">Strong</a>
             <a href="#">SuperShapka</a>
+            <p class="mobile-viev">T</p>
             <a href="#">Tavitta</a>
             <a href="#">Tex Tactiс</a>
             <a href="#">Tonak</a>
             <a href="#">Tornado</a>
             <a href="#">Totti (Storm)</a>
             <a href="#">Trend</a>
+            <p class="mobile-viev">V</p>
             <a href="#">Verenitsa (Svetlitsa)</a>
             <a href="#">Vintage+</a>
             <a href="#">Viva La Vita (Storm)</a>
             <a href="#">Vizio</a>
             <a href="#">Vladi</a>
+            <p class="mobile-viev">W</p>
             <a href="#">Wag</a>
             <a href="#">Willi</a>
             <a href="#">Woolcano</a>
+            <p class="mobile-viev">И</p>
             <a href="#">Инга Шляпный дом</a>
+            <p class="mobile-viev">М</p>
             <a href="#">Моя шляпка</a>
+            <p class="mobile-viev">О</p>
             <a href="#">Оборудование</a>
+            <p class="mobile-viev">П</p>
             <a href="#">Полярик</a>
             <a href="#">ПриКиндер</a>
+            <p class="mobile-viev">С</p>
             <a href="#">Сиринга</a>
+            <p class="mobile-viev">Т</p>
             <a href="#">Теплыши</a>
             <a href="#">Тиарис</a>
+        </div>
         </section>
     </div>
 
@@ -885,5 +909,5 @@
 <script src="js/jq-min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/main.js"></script>
-
+<div class="overlay"></div>
 </html>
