--- a/shapki/index.html
+++ b/shapki/index.html
@@ -16,6 +16,12 @@
 </head>
 <header>
     <div class="header-top content-wrapper flex">
+        <div class="mobile-viev flex jc-start align-cent">
+            <img class="logo-mobile" src="img/logo-shap.png" alt="">
+            <button class="top-mobile"><img src="img/cart-mobile.png" alt=""></button>
+            <button class="top-mobile"><img src="img/profile-mobile.png" alt=""></button>
+            <button class="top-mobile"><img src="img/heart-mobile.png" alt=""></button>
+        </div>
         <div class="menubutton menubutton_header">
             <div class="menuitem"></div>
             <div class="menuitem"></div>
@@ -36,7 +42,7 @@
     <div class="border"></div>
     <div class="header-middle flex content-wrapper">
         <img class="logo" src="img/logo-shap.png" width="107" height="115" alt="">
-        <div>
+        <div class="phone-wrapper">
             <a class="phone" href="tel:89000000000"> 8 900 000 00 00 </a>
             <button class="button-header">Обратный звонок</button>
         </div>
