--- a/shapki/index.html
+++ b/shapki/index.html
@@ -91,15 +91,15 @@
                     <div class="menuitem"></div>
                     <div class="menuitem"></div>
                 </div></li>
-                <li><a href="#">Женщинам</a></li>
+                <li class="bg-menu"><a href="#">Женщинам</a></li>
                 <li><a href="#">Мужчинам</a></li>
-                <li><a href="#">Детям</a></li>
+                <li class="bg-menu"><a href="#">Детям</a></li>
                 <li><a href="#">Подросткам</a></li>
-                <li><a href="#">Сезонность</a></li>
+                <li class="bg-menu"><a href="#">Сезонность</a></li>
                 <li><a href="#">Оборудование</a></li>
-                <li><a href="#">Новинки</a></li>
+                <li class="bg-menu"><a href="#">Новинки</a></li>
                 <li><a href="#">Хиты</a></li>
-                <li><a href="#">Акции</a></li>
+                <li class="bg-menu"><a href="#">Акции</a></li>
                 <li class="mobile-viev mobile-main mobile-factory"><a href="#">Производители</a></li>
                 <li class="mobile-viev"><a href="#">О компании</a></li>
                 <li class="mobile-viev"><a href="#">Доставка</a></li>
@@ -750,111 +750,111 @@
             <li class="mobile-viev mobile-main aside-viev"><a href="#">Производители</a></li>
             <h3 class="header-about">Наши поставщики</h3>
             <div class="aside-content">
-            <a style="margin-top: 20px;" href="#">Artel</a>
-            <p class="mobile-viev">A</p>
-            <a href="#">Avanta</a>
+            <p class="mobile-viev bg-menu">A</p>
+            <a href="#">Artel</a>
+            <a class="bg-menu" href="#">Avanta</a>
             <a href="#">Avenue</a>
-            <p class="mobile-viev">B</p>
+            <p class="mobile-viev bg-menu">B</p>
             <a href="#">Bebe Loca</a>
-            <a href="#">Bonds you</a>
+            <a class="bg-menu" href="#">Bonds you</a>
             <a href="#">Bonnet</a>
-            <a href="#">Brand 69</a>
+            <a class="bg-menu" href="#">Brand 69</a>
             <p class="mobile-viev">C</p>
-            <a href="#">Canoe</a>
+            <a class="bg-menu" href="#">Canoe</a>
             <a href="#">Capolli</a>
-            <a href="#">Colibri</a>
+            <a class="bg-menu" href="#">Colibri</a>
             <p class="mobile-viev">D</p>
-            <a href="#">Di Lana</a>
+            <a class="bg-menu" href="#">Di Lana</a>
             <a href="#">Dispacci</a>
-            <a href="#">Dress Cote</a>
+            <a class="bg-menu" href="#">Dress Cote</a>
             <p class="mobile-viev">E</p>
-            <a href="#">El Gorro</a>
+            <a class="bg-menu" href="#">El Gorro</a>
             <a href="#">Elfrio (marhatter)</a>
-            <p class="mobile-viev">F</p>
+            <p class="mobile-viev bg-menu">F</p>
             <a href="#">Fishka</a>
-            <a href="#">Fomas</a>
+            <a class="bg-menu" href="#">Fomas</a>
             <a href="#">Forti</a>
-            <p class="mobile-viev">G</p>
+            <p class="bg-menu" class="mobile-viev">G</p>
             <a href="#">Gulyann Knitwear</a>
-            <p class="mobile-viev">H</p>
+            <p class="mobile-viev bg-menu">H</p>
             <a href="#">Happy Lama</a>
-            <a href="#">Harmon Moda</a>
+            <a class="bg-menu" href="#">Harmon Moda</a>
             <a href="#">HitHatsHOH</a>
-            <p class="mobile-viev">I</p>
+            <p class="mobile-viev bg-menu">I</p>
             <a href="#">Imojo</a>
-            <p class="mobile-viev">K</p>
+            <p class="mobile-viev bg-menu">K</p>
             <a href="#">Kamea</a>
-            <a href="#">Katta</a>
+            <a class="bg-menu" href="#">Katta</a>
             <a href="#">Korkki</a>
-            <a href="#">Kotik</a>
+            <a class="bg-menu" href="#">Kotik</a>
             <a href="#">Krife</a>
-            <a href="#">Ksenzov</a>
+            <a class="bg-menu" href="#">Ksenzov</a>
             <p class="mobile-viev">L</p>
-            <a href="#">La Chica Loca</a>
+            <a class="bg-menu" href="#">La Chica Loca</a>
             <a href="#">La Planda</a>
-            <a href="#">Landre</a>
+            <a class="bg-menu" href="#">Landre</a>
             <a href="#">Levelpro</a>
-            <a href="#">Lf Label</a>
+            <a class="bg-menu" href="#">Lf Label</a>
             <p class="mobile-viev">M</p>
-            <a href="#">Margot Bis</a>
+            <a class="bg-menu" href="#">Margot Bis</a>
             <a href="#">Marhatter</a>
-            <a href="#">Maxval</a>
+            <a class="bg-menu" href="#">Maxval</a>
             <a href="#">Mialt</a>
-            <a href="#">Mike Ambaroff</a>
+            <a class="bg-menu" href="#">Mike Ambaroff</a>
             <a href="#">Miks</a>
-            <a href="#">Monlolan</a>
+            <a class="bg-menu" href="#">Monlolan</a>
             <a href="#">MYLIKE</a>
-            <p class="mobile-viev">N</p>
+            <p class="mobile-viev bg-menu">N</p>
             <a href="#">NEW CAPS</a>
-            <a href="#">Noryalli</a>
+            <a class="bg-menu" href="#">Noryalli</a>
             <p class="mobile-viev">O</p>
-            <a href="#">Ocean Angel</a>
+            <a class="bg-menu" href="#">Ocean Angel</a>
             <a href="#">Oxygon</a>
-            <p class="mobile-viev">P</p>
+            <p class="mobile-viev bg-menu">P</p>
             <a href="#">Paola Belleza</a>
-            <a href="#">Pelloni</a>
+            <a class="bg-menu" href="#">Pelloni</a>
             <p class="mobile-viev">R</p>
-            <a href="#">Romiks</a>
+            <a class="bg-menu" href="#">Romiks</a>
             <p class="mobile-viev">S</p>
-            <a href="#">Sergeo & Leoni</a>
+            <a class="bg-menu" href="#">Sergeo & Leoni</a>
             <a href="#">Shapkoff</a>
-            <a href="#">Snezhna (marhatter)</a>
+            <a class="bg-menu" href="#">Snezhna (marhatter)</a>
             <a href="#">Sofia</a>
-            <a href="#">Static</a>
+            <a class="bg-menu" href="#">Static</a>
             <a href="#">Stigler</a>
-            <a href="#">Storm</a>
+            <a class="bg-menu" href="#">Storm</a>
             <a href="#">Strong</a>
-            <a href="#">SuperShapka</a>
+            <a class="bg-menu" href="#">SuperShapka</a>
             <p class="mobile-viev">T</p>
-            <a href="#">Tavitta</a>
+            <a class="bg-menu" href="#">Tavitta</a>
             <a href="#">Tex Tactiс</a>
-            <a href="#">Tonak</a>
+            <a class="bg-menu" href="#">Tonak</a>
             <a href="#">Tornado</a>
-            <a href="#">Totti (Storm)</a>
+            <a class="bg-menu" href="#">Totti (Storm)</a>
             <a href="#">Trend</a>
-            <p class="mobile-viev">V</p>
+            <p class="mobile-viev bg-menu">V</p>
             <a href="#">Verenitsa (Svetlitsa)</a>
-            <a href="#">Vintage+</a>
+            <a class="bg-menu" href="#">Vintage+</a>
             <a href="#">Viva La Vita (Storm)</a>
-            <a href="#">Vizio</a>
+            <a class="bg-menu" href="#">Vizio</a>
             <a href="#">Vladi</a>
-            <p class="mobile-viev">W</p>
+            <p class="mobile-viev bg-menu">W</p>
             <a href="#">Wag</a>
-            <a href="#">Willi</a>
+            <a class="bg-menu" href="#">Willi</a>
             <a href="#">Woolcano</a>
-            <p class="mobile-viev">И</p>
+            <p class="mobile-viev bg-menu">И</p>
             <a href="#">Инга Шляпный дом</a>
-            <p class="mobile-viev">М</p>
+            <p class="mobile-viev bg-menu">М</p>
             <a href="#">Моя шляпка</a>
-            <p class="mobile-viev">О</p>
+            <p class="mobile-viev bg-menu">О</p>
             <a href="#">Оборудование</a>
-            <p class="mobile-viev">П</p>
+            <p class="mobile-viev bg-menu">П</p>
             <a href="#">Полярик</a>
-            <a href="#">ПриКиндер</a>
+            <a class="bg-menu" href="#">ПриКиндер</a>
             <p class="mobile-viev">С</p>
-            <a href="#">Сиринга</a>
+            <a class="bg-menu" href="#">Сиринга</a>
             <p class="mobile-viev">Т</p>
-            <a href="#">Теплыши</a>
+            <a class="bg-menu" href="#">Теплыши</a>
             <a href="#">Тиарис</a>
         </div>
         </section>
