--- a/shapki/index.html
+++ b/shapki/index.html
@@ -774,7 +774,7 @@
             <a href="#">Fishka</a>
             <a class="bg-menu" href="#">Fomas</a>
             <a href="#">Forti</a>
-            <p class="bg-menu" class="mobile-viev">G</p>
+            <p class="mobile-viev bg-menu">G</p>
             <a href="#">Gulyann Knitwear</a>
             <p class="mobile-viev bg-menu">H</p>
             <a href="#">Happy Lama</a>
