--- a/shapki/index.html
+++ b/shapki/index.html
@@ -108,7 +108,12 @@
             </div>
         </div>
     </ul>
-    <div class="content-wrapper factory">
+    
+</header>
+
+<body>
+    <div class="mobile-change">
+    <section class="content-wrapper factory">
         <ul class="flex jc-between align-cent">
             <button class="proizv-button">Производители</button>
             <div class="owl-carousel owl-theme slide-three">
@@ -309,18 +314,15 @@
             </div>
         </div>
         </ul>
-    </div>
-    <div class="slider-wrapper">
+    </section>
+    <section class="slider-wrapper">
     <div class="owl-carousel owl-theme slide-one">
         <div class="slider-item"></div>
         <div class="slider-item"></div>
     </div>
     <button class="slider-button">Смотреть</button>
-</div>
-</header>
-
-<body>
-    <div class="aside-wrapper">
+</section>
+    <section class="aside-wrapper">
         <div class="aside-fixed">
             <p>Преимущества</p>
         </div>
@@ -331,7 +333,7 @@
         <div class="flex fixed-item"><img src="img/1-3.png" alt="">
             <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor </span>
         </div>
-    </div>
+    </section>
     <section class="gallery tabs">
         <div class="flex content-wrapper jc-between tabs_caption">
             <div class="toggle-button green-button active">Новинки</div>
@@ -465,6 +467,7 @@
         </div>
         </div>
     </section>
+</div>
     <div class="flex jc-center">
         <div class="main-content">
             <section class="seasons">
