--- a/shapki/index.html
+++ b/shapki/index.html
@@ -121,10 +121,10 @@
                 <li>A
                     <div class="info-container">
                         <div class="wrapper-letter">
-                        <div class="flex align-cent">A<img src="img/brands-1.jpg" alt=""></div>
-                        <div class="flex align-cent">Aртель<img src="img/brands-2.jpg" alt=""></div>
-                        <div class="flex align-cent">Avanta<img src="img/brands-3.png" alt=""></div>
-                        <div class="flex align-cent">Avenue<img src="img/brands-4.png" alt=""></div>
+                        <a href="#"><div class="flex align-cent">A<img src="img/brands-1.jpg" alt=""></div></a>
+                        <a href="#"><div class="flex align-cent">Aртель<img src="img/brands-2.jpg" alt=""></div></a>
+                        <a href="#"><div class="flex align-cent">Avanta<img src="img/brands-3.png" alt=""></div></a>
+                        <a href="#"><div class="flex align-cent">Avenue<img src="img/brands-4.png" alt=""></div></a>
                         </div>
                     </div>
                 </li>
