--- a/shapki/index.html
+++ b/shapki/index.html
@@ -91,20 +91,38 @@
                     <div class="menuitem"></div>
                     <div class="menuitem"></div>
                 </div></li>
-                <li class="bg-menu"><a href="#">Женщинам</a></li>
-                <li><a href="#">Мужчинам</a></li>
-                <li class="bg-menu"><a href="#">Детям</a></li>
-                <li><a href="#">Подросткам</a></li>
-                <li class="bg-menu"><a href="#">Сезонность</a></li>
-                <li><a href="#">Оборудование</a></li>
-                <li class="bg-menu"><a href="#">Новинки</a></li>
-                <li><a href="#">Хиты</a></li>
-                <li class="bg-menu"><a href="#">Акции</a></li>
+                <a href="#"><li class="bg-menu dropdown-active">Женщинам
+                <ul class="dropdown-menu">
+                    <a href="#"><li class="dropdown-header">Женская коллекция</li></a>
+                    <a href="#"><li>Шапки и береты</li></a>
+                    <a href="#"><li>Комплекты</li></a>
+                    <a href="#"><li>Снуды</li></a>
+                    <a href="#"><li>Шарфы</li></a>
+                    <a href="#"><li class="dropdown-header">Женская коллекция премиум класса</li></a>
+                    <a href="#"><li>Шапки и береты</li></a>
+                    <a href="#"><li>Комплекты</li></a>
+                    <a href="#"><li>Снуды</li></a>
+                    <a href="#"><li>Шарфы</li></a>
+                    <a href="#"><li class="dropdown-header">Женская летняя коллекция</li></a>
+                    <a href="#"><li>Банданы, косынки и другое</li></a>
+                    <a href="#"><li>Бейсболки и кепки</li></a>
+                    <a href="#"><li>Береты и шапочки</li></a>
+                    <a href="#"><li>Шляпы</li></a>
+                </ul>
+                </li></a>
+                <a href="#"><li class="dropdown-active">Мужчинам</li></a>
+                <a href="#"><li class="bg-menu dropdown-active">Детям</li></a>
+                <a href="#"><li class="dropdown-active">Подросткам</li></a>
+                <a href="#"><li class="bg-menu dropdown-active">Сезонность</li></a>
+                <a href="#"><li class="dropdown-active">Оборудование</li></a>
+                <a href="#"><li class="bg-menu dropdown-active">Новинки</li></a>
+                <a href="#"><li class="dropdown-active">Хиты</li></a>
+                <a href="#"><li class="bg-menu">Акции</li></a>
                 <li class="mobile-viev mobile-main mobile-factory"><a href="#">Производители</a></li>
                 <li class="mobile-viev"><a href="#">О компании</a></li>
                 <li class="mobile-viev"><a href="#">Доставка</a></li>
                 <li class="mobile-viev"><a href="#">Гарантии</a></li class="mobile-viev">
-                <li class="mobile-viev"><a href="#">Контакты</a></li>
+                <li class="mobile-viev"><a href="#">Контакты</a>/li>
             </div>
         </div>
     </ul>
