--- a/shapki/index.html
+++ b/shapki/index.html
@@ -110,8 +110,43 @@
                     <a href="#"><li>Шляпы</li></a>
                 </ul>
                 </li></a>
-                <a href="#"><li class="dropdown-active">Мужчинам</li></a>
-                <a href="#"><li class="bg-menu dropdown-active">Детям</li></a>
+                <a href="#"><li class="dropdown-active">Мужчинам
+                    <ul class="dropdown-menu">
+                        <a href="#"><li class="dropdown-header">Мужская коллекция</li></a>
+                        <a href="#"><li>Шапки</li></a>
+                        <a href="#"><li>Кепки и бейсболки</li></a>
+                        <a href="#"><li>Снуды</li></a>
+                        <a href="#"><li>Шарфы</li></a>
+                        <a href="#"><li class="dropdown-header">Мужская коллекция премиум класса</li></a>
+                        <a href="#"><li>Шапки и береты</li></a>
+                        <a href="#"><li>Комплекты</li></a>
+                        <a href="#"><li>Снуды</li></a>
+                        <a href="#"><li>Шарфы</li></a>
+                        <a href="#"><li class="dropdown-header">Мужская летняя коллекция</li></a>
+                        <a href="#"><li>Банданы, косынки и другое</li></a>
+                        <a href="#"><li>Бейсболки и кепки</li></a>
+                        <a href="#"><li>Береты и шапочки</li></a>
+                        <a href="#"><li>Шляпы</li></a>
+                    </ul>
+                </li></a>
+                <a href="#"><li class="bg-menu dropdown-active">Детям
+                    <ul class="dropdown-menu">
+                        <a href="#"><li class="dropdown-header">Женская коллекция</li></a>
+                        <a href="#"><li>Шапки и береты</li></a>
+                        <a href="#"><li>Комплекты</li></a>
+                        <a href="#"><li>Шарфы и снуды</li></a>
+                        <a href="#"><li class="dropdown-header">Женская коллекция премиум класса</li></a>
+                        <a href="#"><li>Шапки и береты</li></a>
+                        <a href="#"><li>Комплекты</li></a>
+                        <a href="#"><li>Снуды</li></a>
+                        <a href="#"><li>Шарфы</li></a>
+                        <a href="#"><li class="dropdown-header">Женская летняя коллекция</li></a>
+                        <a href="#"><li>Банданы, косынки и другое</li></a>
+                        <a href="#"><li>Бейсболки и кепки</li></a>
+                        <a href="#"><li>Береты и шапочки</li></a>
+                        <a href="#"><li>Шляпы</li></a>
+                    </ul>
+                </li></a>
                 <a href="#"><li class="dropdown-active">Подросткам</li></a>
                 <a href="#"><li class="bg-menu dropdown-active">Сезонность</li></a>
                 <a href="#"><li class="dropdown-active">Оборудование</li></a>
