--- a/shapki/index.html
+++ b/shapki/index.html
@@ -118,14 +118,13 @@
                         <a href="#"><li>Снуды</li></a>
                         <a href="#"><li>Шарфы</li></a>
                         <a href="#"><li class="dropdown-header">Мужская коллекция премиум класса</li></a>
-                        <a href="#"><li>Шапки и береты</li></a>
-                        <a href="#"><li>Комплекты</li></a>
+                        <a href="#"><li>Шапки</li></a>
+                        <a href="#"><li>Кепки и бейсболки</li></a>
                         <a href="#"><li>Снуды</li></a>
                         <a href="#"><li>Шарфы</li></a>
                         <a href="#"><li class="dropdown-header">Мужская летняя коллекция</li></a>
-                        <a href="#"><li>Банданы, косынки и другое</li></a>
+                        <a href="#"><li>Банданы, арафатка, феска</li></a>
                         <a href="#"><li>Бейсболки и кепки</li></a>
-                        <a href="#"><li>Береты и шапочки</li></a>
                         <a href="#"><li>Шляпы</li></a>
                     </ul>
                 </li></a>
@@ -157,7 +156,7 @@
                 <li class="mobile-viev"><a href="#">О компании</a></li>
                 <li class="mobile-viev"><a href="#">Доставка</a></li>
                 <li class="mobile-viev"><a href="#">Гарантии</a></li class="mobile-viev">
-                <li class="mobile-viev"><a href="#">Контакты</a>/li>
+                <li class="mobile-viev"><a href="#">Контакты</a></li>
             </div>
         </div>
     </ul>
@@ -165,6 +164,7 @@
 </header>
 
 <body>
+    <div class="main-wrapper">
     <div class="mobile-change">
     <section class="content-wrapper factory">
         <ul class="flex jc-between align-cent">
@@ -915,7 +915,7 @@
         </div>
         </section>
     </div>
-
+</div>
 </body>
 <footer>
     <div class="borders">
