--- a/shapki/index.html
+++ b/shapki/index.html
@@ -91,6 +91,7 @@
                     <div class="menuitem"></div>
                     <div class="menuitem"></div>
                 </div></li>
+                <div style="position: relative";>
                 <a href="#"><li class="bg-menu dropdown-active">Женщинам
                     <ul class="dropdown-menu">
                         <a href="#"><li class="dropdown-header">Женская коллекция</li></a>
@@ -109,8 +110,25 @@
                         <a href="#"><li>Береты и шапочки</li></a>
                         <a href="#"><li>Шляпы</li></a>
                     </ul>
-                </li></a>
-
+                </li>
+                <ul class="dropdown-menu">
+                    <a href="#"><li class="dropdown-header">Женская коллекция</li></a>
+                    <a href="#"><li>Шапки и береты</li></a>
+                    <a href="#"><li>Комплекты</li></a>
+                    <a href="#"><li>Снуды</li></a>
+                    <a href="#"><li>Шарфы</li></a>
+                    <a href="#"><li class="dropdown-header">Женская коллекция премиум класса</li></a>
+                    <a href="#"><li>Шапки и береты</li></a>
+                    <a href="#"><li>Комплекты</li></a>
+                    <a href="#"><li>Снуды</li></a>
+                    <a href="#"><li>Шарфы</li></a>
+                    <a href="#"><li class="dropdown-header">Женская летняя коллекция</li></a>
+                    <a href="#"><li>Банданы, косынки и другое</li></a>
+                    <a href="#"><li>Бейсболки и кепки</li></a>
+                    <a href="#"><li>Береты и шапочки</li></a>
+                    <a href="#"><li>Шляпы</li></a>
+                </ul></a></div>
+                <div style="position: relative";>
                 <a href="#"><li class="dropdown-active">Мужчинам
                     <ul class="dropdown-menu">
                         <a href="#"><li class="dropdown-header">Мужская коллекция</li></a>
@@ -128,7 +146,23 @@
                         <a href="#"><li>Бейсболки и кепки</li></a>
                         <a href="#"><li>Шляпы</li></a>
                     </ul>
-                </li></a>
+                </li>
+                <ul class="dropdown-menu">
+                    <a href="#"><li class="dropdown-header">Мужская коллекция</li></a>
+                    <a href="#"><li>Шапки</li></a>
+                    <a href="#"><li>Кепки и бейсболки</li></a>
+                    <a href="#"><li>Снуды</li></a>
+                    <a href="#"><li>Шарфы</li></a>
+                    <a href="#"><li class="dropdown-header">Мужская коллекция премиум класса</li></a>
+                    <a href="#"><li>Шапки</li></a>
+                    <a href="#"><li>Кепки и бейсболки</li></a>
+                    <a href="#"><li>Снуды</li></a>
+                    <a href="#"><li>Шарфы</li></a>
+                    <a href="#"><li class="dropdown-header">Мужская летняя коллекция</li></a>
+                    <a href="#"><li>Банданы, арафатка, феска</li></a>
+                    <a href="#"><li>Бейсболки и кепки</li></a>
+                    <a href="#"><li>Шляпы</li></a>
+                </ul></a></div>
                 <a href="#"><li class="bg-menu dropdown-active">Детям
                     <ul class="dropdown-menu">
                         <a href="#"><li class="dropdown-header">Женская коллекция</li></a>
@@ -146,7 +180,8 @@
                         <a href="#"><li>Береты и шапочки</li></a>
                         <a href="#"><li>Шляпы</li></a>
                     </ul>
-                </li></a>
+                </li>
+            </a>
                 <a href="#"><li class="dropdown-active">Подросткам</li></a>
                 <a href="#"><li class="bg-menu dropdown-active">Сезонность</li></a>
                 <a href="#"><li class="dropdown-active">Оборудование</li></a>
@@ -158,7 +193,7 @@
                 <li class="mobile-viev"><a href="#">Доставка</a></li>
                 <li class="mobile-viev"><a href="#">Гарантии</a></li class="mobile-viev">
                 <li class="mobile-viev"><a href="#">Контакты</a></li>
-            </div>
+            </divstyle="position:>
         </div>
     </ul>
     
