--- a/shapki/index.html
+++ b/shapki/index.html
@@ -91,7 +91,7 @@
                     <div class="menuitem"></div>
                     <div class="menuitem"></div>
                 </div></li>
-                <div style="position: relative";>
+                <div class="seasons-block">
                 <a href="#"><li class="bg-menu dropdown-active">Женщинам
                     <ul class="dropdown-menu">
                         <a href="#"><li class="dropdown-header">Женская коллекция</li></a>
@@ -128,7 +128,7 @@
                     <a href="#"><li>Береты и шапочки</li></a>
                     <a href="#"><li>Шляпы</li></a>
                 </ul></a></div>
-                <div style="position: relative";>
+                <div class="seasons-block">
                 <a href="#"><li class="dropdown-active">Мужчинам
                     <ul class="dropdown-menu">
                         <a href="#"><li class="dropdown-header">Мужская коллекция</li></a>
@@ -163,25 +163,52 @@
                     <a href="#"><li>Бейсболки и кепки</li></a>
                     <a href="#"><li>Шляпы</li></a>
                 </ul></a></div>
+                <div class="seasons-block">
                 <a href="#"><li class="bg-menu dropdown-active">Детям
                     <ul class="dropdown-menu">
-                        <a href="#"><li class="dropdown-header">Женская коллекция</li></a>
-                        <a href="#"><li>Шапки и береты</li></a>
+                        <a href="#"><li class="dropdown-header">Деткая коллекция</li></a>
+                        <a href="#"><li>Верхняя одежда</li></a>
+                        <a href="#"><li>Шапки</li></a>
+                        <a href="#"><li>Комплекты</li></a>
+                        <a href="#"><li>Шарфы и манишки</li></a>
+                        <a href="#"><li>Перчатки и варежки</li></a>
+                        <a href="#"><li class="dropdown-header">Подростковая коллекция</li></a>
+                        <a href="#"><li>Шапки </li></a>
                         <a href="#"><li>Комплекты</li></a>
                         <a href="#"><li>Шарфы и снуды</li></a>
-                        <a href="#"><li class="dropdown-header">Женская коллекция премиум класса</li></a>
-                        <a href="#"><li>Шапки и береты</li></a>
-                        <a href="#"><li>Комплекты</li></a>
-                        <a href="#"><li>Снуды</li></a>
-                        <a href="#"><li>Шарфы</li></a>
-                        <a href="#"><li class="dropdown-header">Женская летняя коллекция</li></a>
+                        <a href="#"><li class="dropdown-header">Детская летняя коллекция</li></a>
                         <a href="#"><li>Банданы, косынки и другое</li></a>
                         <a href="#"><li>Бейсболки и кепки</li></a>
                         <a href="#"><li>Береты и шапочки</li></a>
                         <a href="#"><li>Шляпы</li></a>
+                        <a href="#"><li class="dropdown-header">Подростковая летняя коллекция</li></a>
+                        <a href="#"><li>Банданы, косынки и другое</li></a>
+                        <a href="#"><li>Бейсболки и кепки</li></a>
+                        <a href="#"><li>Береты и шапочки</li></a>
                     </ul>
                 </li>
-            </a>
+                <ul class="dropdown-menu">
+                    <a href="#"><li class="dropdown-header">Деткая коллекция</li></a>
+                    <a href="#"><li>Верхняя одежда</li></a>
+                    <a href="#"><li>Шапки</li></a>
+                    <a href="#"><li>Комплекты</li></a>
+                    <a href="#"><li>Шарфы и манишки</li></a>
+                    <a href="#"><li>Перчатки и варежки</li></a>
+                    <a href="#"><li class="dropdown-header">Подростковая коллекция</li></a>
+                    <a href="#"><li>Шапки </li></a>
+                    <a href="#"><li>Комплекты</li></a>
+                    <a href="#"><li>Шарфы и снуды</li></a>
+                    <a href="#"><li class="dropdown-header">Детская летняя коллекция</li></a>
+                    <a href="#"><li>Банданы, косынки и другое</li></a>
+                    <a href="#"><li>Бейсболки и кепки</li></a>
+                    <a href="#"><li>Береты и шапочки</li></a>
+                    <a href="#"><li>Шляпы</li></a>
+                    <a href="#"><li class="dropdown-header">Подростковая летняя коллекция</li></a>
+                    <a href="#"><li>Банданы, косынки и другое</li></a>
+                    <a href="#"><li>Бейсболки и кепки</li></a>
+                    <a href="#"><li>Береты и шапочки</li></a>
+                </ul>
+            </a></div>
                 <a href="#"><li class="dropdown-active">Подросткам</li></a>
                 <a href="#"><li class="bg-menu dropdown-active">Сезонность</li></a>
                 <a href="#"><li class="dropdown-active">Оборудование</li></a>
