--- a/shapki/catalog.html
+++ b/shapki/catalog.html
@@ -204,7 +204,18 @@
             </section>
             <section class="sale">Распродажа <span>-70%</span></section>
     </div>
-
+    <section class="aside-wrapper">
+        <div class="aside-fixed">
+            <p>Преимущества</p>
+        </div>
+        <div class="flex fixed-item"><img src="img/1-1.png" alt=""><span>Lorem ipsum dolor sit amet, consectetur
+                adipisicing elit, sed do eiusmod tempor </span></div>
+        <div class="flex fixed-item"><img src="img/1-2.png" alt=""><span>Lorem ipsum dolor sit amet, consectetur
+                adipisicing elit, sed do eiusmod tempor </span></div>
+        <div class="flex fixed-item"><img src="img/1-3.png" alt="">
+            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor </span>
+        </div>
+    </section>
 </body>
 <footer>
     <div class="borders">
