--- a/shapki/catalog.html
+++ b/shapki/catalog.html
@@ -832,6 +832,118 @@
             <img class="footer-arrow" src="img/keyboard-right-arrow-button1.png" alt="">
         </div>
     </div>
+    <section class="aside mobile-viev">
+        <li class="mobile-viev mobile-main aside-viev"><a href="#">Производители</a></li>
+        <h3 class="header-about">Наши поставщики</h3>
+        <div class="aside-content">
+            <p class="mobile-viev bg-menu">A</p>
+            <a href="#">Artel</a>
+            <a class="bg-menu" href="#">Avanta</a>
+            <a href="#">Avenue</a>
+            <p class="mobile-viev bg-menu">B</p>
+            <a href="#">Bebe Loca</a>
+            <a class="bg-menu" href="#">Bonds you</a>
+            <a href="#">Bonnet</a>
+            <a class="bg-menu" href="#">Brand 69</a>
+            <p class="mobile-viev">C</p>
+            <a class="bg-menu" href="#">Canoe</a>
+            <a href="#">Capolli</a>
+            <a class="bg-menu" href="#">Colibri</a>
+            <p class="mobile-viev">D</p>
+            <a class="bg-menu" href="#">Di Lana</a>
+            <a href="#">Dispacci</a>
+            <a class="bg-menu" href="#">Dress Cote</a>
+            <p class="mobile-viev">E</p>
+            <a class="bg-menu" href="#">El Gorro</a>
+            <a href="#">Elfrio (marhatter)</a>
+            <p class="mobile-viev bg-menu">F</p>
+            <a href="#">Fishka</a>
+            <a class="bg-menu" href="#">Fomas</a>
+            <a href="#">Forti</a>
+            <p class="mobile-viev bg-menu">G</p>
+            <a href="#">Gulyann Knitwear</a>
+            <p class="mobile-viev bg-menu">H</p>
+            <a href="#">Happy Lama</a>
+            <a class="bg-menu" href="#">Harmon Moda</a>
+            <a href="#">HitHatsHOH</a>
+            <p class="mobile-viev bg-menu">I</p>
+            <a href="#">Imojo</a>
+            <p class="mobile-viev bg-menu">K</p>
+            <a href="#">Kamea</a>
+            <a class="bg-menu" href="#">Katta</a>
+            <a href="#">Korkki</a>
+            <a class="bg-menu" href="#">Kotik</a>
+            <a href="#">Krife</a>
+            <a class="bg-menu" href="#">Ksenzov</a>
+            <p class="mobile-viev">L</p>
+            <a class="bg-menu" href="#">La Chica Loca</a>
+            <a href="#">La Planda</a>
+            <a class="bg-menu" href="#">Landre</a>
+            <a href="#">Levelpro</a>
+            <a class="bg-menu" href="#">Lf Label</a>
+            <p class="mobile-viev">M</p>
+            <a class="bg-menu" href="#">Margot Bis</a>
+            <a href="#">Marhatter</a>
+            <a class="bg-menu" href="#">Maxval</a>
+            <a href="#">Mialt</a>
+            <a class="bg-menu" href="#">Mike Ambaroff</a>
+            <a href="#">Miks</a>
+            <a class="bg-menu" href="#">Monlolan</a>
+            <a href="#">MYLIKE</a>
+            <p class="mobile-viev bg-menu">N</p>
+            <a href="#">NEW CAPS</a>
+            <a class="bg-menu" href="#">Noryalli</a>
+            <p class="mobile-viev">O</p>
+            <a class="bg-menu" href="#">Ocean Angel</a>
+            <a href="#">Oxygon</a>
+            <p class="mobile-viev bg-menu">P</p>
+            <a href="#">Paola Belleza</a>
+            <a class="bg-menu" href="#">Pelloni</a>
+            <p class="mobile-viev">R</p>
+            <a class="bg-menu" href="#">Romiks</a>
+            <p class="mobile-viev">S</p>
+            <a class="bg-menu" href="#">Sergeo & Leoni</a>
+            <a href="#">Shapkoff</a>
+            <a class="bg-menu" href="#">Snezhna (marhatter)</a>
+            <a href="#">Sofia</a>
+            <a class="bg-menu" href="#">Static</a>
+            <a href="#">Stigler</a>
+            <a class="bg-menu" href="#">Storm</a>
+            <a href="#">Strong</a>
+            <a class="bg-menu" href="#">SuperShapka</a>
+            <p class="mobile-viev">T</p>
+            <a class="bg-menu" href="#">Tavitta</a>
+            <a href="#">Tex Tactiс</a>
+            <a class="bg-menu" href="#">Tonak</a>
+            <a href="#">Tornado</a>
+            <a class="bg-menu" href="#">Totti (Storm)</a>
+            <a href="#">Trend</a>
+            <p class="mobile-viev bg-menu">V</p>
+            <a href="#">Verenitsa (Svetlitsa)</a>
+            <a class="bg-menu" href="#">Vintage+</a>
+            <a href="#">Viva La Vita (Storm)</a>
+            <a class="bg-menu" href="#">Vizio</a>
+            <a href="#">Vladi</a>
+            <p class="mobile-viev bg-menu">W</p>
+            <a href="#">Wag</a>
+            <a class="bg-menu" href="#">Willi</a>
+            <a href="#">Woolcano</a>
+            <p class="mobile-viev bg-menu">И</p>
+            <a href="#">Инга Шляпный дом</a>
+            <p class="mobile-viev bg-menu">М</p>
+            <a href="#">Моя шляпка</a>
+            <p class="mobile-viev bg-menu">О</p>
+            <a href="#">Оборудование</a>
+            <p class="mobile-viev bg-menu">П</p>
+            <a href="#">Полярик</a>
+            <a class="bg-menu" href="#">ПриКиндер</a>
+            <p class="mobile-viev">С</p>
+            <a class="bg-menu" href="#">Сиринга</a>
+            <p class="mobile-viev">Т</p>
+            <a class="bg-menu" href="#">Теплыши</a>
+            <a href="#">Тиарис</a>
+        </div>
+    </section>
 </footer>
 <script src="js/jq-min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
