--- a/english_school/index.html
+++ b/english_school/index.html
@@ -963,7 +963,7 @@
                     </tr>
                     <tr>
                         <td class="td-question last-question">6. What accomplishment fills you with pride so far this year?</td>
-                        <td class="last-ask">I am proud of f my students having passed Cambridge exams.</td>
+                        <td class="last-ask">I am proud of my students having passed Cambridge exams.</td>
                     </tr>
                 </table>
             </div>
